prover-ray/zkcdriver/testdata/synced/invalid/type_03.zkc
//error:4:7-8:expected type bool
type bool = u1
fn f(x:bool) -> (r:bool) {
  r = 2
  return
}